# Metaheuristics-project

./: .gitignore  CMakeLists.txt  README.md  launch.bat  launch.sh  results.txt
MSVC-proj/: metaheuristique.sln  metaheuristique.vcxproj  metaheuristique.vcxproj.filters
report/: meta-presentation.odp  metaheuristics-report.tex
src/: boat.cpp  boat.h  descent.hpp  heuristic.hpp  heuristicFactory.hpp  localDescent.hpp  localSearch.hpp  main.cpp  solution.cpp  solution.h  tabuSearch.hpp  utils.cpp  utils.h
